--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^7.5.3",
+    "express-session": "^1.17.3",
+    "mongoose": "^7.5.4",
     "nodemon": "^3.0.1"
   }
 }
