--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mongoose": "^7.5.4",
-    "nodemon": "^3.0.1"
+    "fs": "^0.0.1-security",
+    "html-pdf": "^3.0.1",
+    "mammoth": "^1.6.0",
+    "mongoose": "^7.6.4",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.1",
+    "path": "^0.12.7",
+    "pdf-parse": "^1.1.1"
   }
 }
