--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "fs": "^0.0.1-security",
+    "google-auth-library": "^9.1.0",
+    "googleapis": "^128.0.0",
+    "html-pdf": "^3.0.1",
+    "mammoth": "^1.6.0",
     "mongoose": "^7.5.4",
-    "nodemon": "^3.0.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
+    "nodemon": "^3.0.1",
+    "path": "^0.12.7",
+    "pdf-parse": "^1.1.1",
+    "randomstring": "^1.3.0"
   }
 }
