--- a/pharmacy/package.json
+++ b/pharmacy/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.3.1",
+    "@stripe/stripe-js": "^2.1.11",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "stripe": "^14.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
