--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "body-parser": "^1.20.2",
+    "connect-mongo": "^5.1.0",
+    "connect-mongodb-session": "^3.1.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
@@ -23,13 +25,17 @@
     "google-auth-library": "^9.1.0",
     "googleapis": "^128.0.0",
     "html-pdf": "^3.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.6.0",
-    "mongoose": "^7.5.4",
+    "mongoose": "^7.6.5",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
     "path": "^0.12.7",
     "pdf-parse": "^1.1.1",
-    "randomstring": "^1.3.0"
+    "randomstring": "^1.3.0",
+    "socket.io": "^4.7.2"
   }
 }
