--- a/pharmacy/package.json
+++ b/pharmacy/package.json
@@ -29,9 +29,11 @@
     "mdb-react-ui-kit": "^6.3.0",
     "node-cron": "^3.0.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-owl-carousel": "^2.3.3",
     "react-redux": "^9.0.2",
     "react-router-dom": "^6.16.0",
@@ -41,7 +43,10 @@
     "simplebar": "^6.2.5",
     "simplebar-react": "^3.2.4",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.2",
     "stripe": "^14.4.0",
+    "survey-core": "^1.9.121",
+    "survey-react-ui": "^1.9.121",
     "swiper": "^11.0.5",
     "web-vitals": "^3.5.0"
   },
