--- a/pharmacy/package.json
+++ b/pharmacy/package.json
@@ -10,15 +10,45 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coreui/icons": "^3.0.1",
+    "@coreui/icons-react": "^2.2.1",
+    "@coreui/react": "^4.11.0",
+    "@coreui/react-chartjs": "^2.1.3",
+    "@coreui/utils": "^2.0.2",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.14.20",
     "@stripe/react-stripe-js": "^2.3.1",
     "@stripe/stripe-js": "^2.1.11",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.1",
+    "date-fns": "^3.0.0-alpha.2",
+    "jwt-decode": "^4.0.0",
     "mdb-react-ui-kit": "^6.3.0",
+    "node-cron": "^3.0.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-owl-carousel": "^2.3.3",
+    "react-redux": "^9.0.2",
     "react-router-dom": "^6.16.0",
-    "stripe": "^14.4.0"
+    "react-scroll": "^1.9.0",
+    "react-slick": "^0.29.0",
+    "redux": "^5.0.0",
+    "simplebar": "^6.2.5",
+    "simplebar-react": "^3.2.4",
+    "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.2",
+    "stripe": "^14.4.0",
+    "survey-core": "^1.9.121",
+    "survey-react-ui": "^1.9.121",
+    "swiper": "^11.0.5",
+    "web-vitals": "^3.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
